--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,12 @@ import Chip from "../components/chip.astro";
 // Put all your links here
 const links: Link[] = [
   {
-    desc: "Example Project", // The text that will be rendered
-    link: "example.com", // The link
-    icon: "fa-solid fa-home", // An icon from Font Awesome: https://fontawesome.com/search?o=r&m=free
+    desc: "Exemplo",
+    link: "example.com",
+    icon: "fa-solid fa-home",
   },
   {
-    desc: "Cool Project",
+    desc: "Teste",
     link: "example.com",
     icon: "fa-solid fa-store",
   },
@@ -47,13 +47,16 @@ const links: Link[] = [
         src: url(/Geist.ttf);
         font-display: swap;
       }
+      body {
+        background: linear-gradient(135deg, #1e3a8a, #9333ea);
+      }
     </style>
   </head>
   <body
-    class='bg-[#1e1e1e] flex justify-center items-center w-screen h-screen font-[Geist] text-white'
+    class='flex justify-center items-center w-screen h-screen font-[Geist] text-white'
   >
     <main class='w-[80%] flex flex-col gap-8'>
-      <h1 class='md:text-6xl text-4xl font-black text-center'>Your Name</h1>
+      <h1 class='md:text-6xl text-4xl font-black text-center'>Governe</h1>
       <div class='grid justify-center gap-4'>
         {
           links.map(({ desc, link, icon }) => {
@@ -62,12 +65,17 @@ const links: Link[] = [
         }
       </div>
       <div class='flex justify-center gap-8'>
-        <!-- Put some social links who have a definitive icon here: -->
         <Chip link='youtube.com/' icon='fa-brands fa-youtube' />
         <Chip link='github.com/' icon='fa-brands fa-github' />
         <Chip link='x.com/' icon='fa-brands fa-x-twitter' />
       </div>
-      <p class='text-center mx-auto'>Some additional text, like your email</p>
+      <p class='text-center mx-auto'>Site em construção</p>
     </main>
+    <!-- Código Typebot -->
+    <typebot-standard style="width: 100%; height: 600px;"></typebot-standard>
+    <script type="module">
+      import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0.3.4/dist/web.js';
+      Typebot.initStandard({ typebot: "governe", apiHost: "https://bot.cd2.io" });
+    </script>
   </body>
 </html>
