--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ const links: Link[] = [
           <Chip link='github.com/' icon='fa-brands fa-github' />
           <Chip link='x.com/' icon='fa-brands fa-x-twitter' />
         </div>
-        <p class='text-center mx-auto'>Site em construção</p>
+        <p class='text-center mx-auto'>Site em construção - aguardem...</p>
       </div>
 
       <!-- Typebot -->
