--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,8 +81,9 @@ const links: Link[] = [
     <main class="container w-[80%]">
       <!-- Conteúdo principal -->
       <div>
-        <h1 class='md:text-6xl text-4xl font-black text-center'>Governe</h1>
-        <div class='grid justify-center gap-4'>
+        <h1 class='md:text-6xl text-4xl font-black text-center'>Leal Fidelizações</h1>
+        <h2 class='text-center mx-auto'>Digite seu celular para conferir seu cashback</h2>
+        <!-- <div class='grid justify-center gap-4'>
           {
             links.map(({ desc, link, icon }) => {
               return <Card {desc} {link} {icon} />;
@@ -93,8 +94,8 @@ const links: Link[] = [
           <Chip link='youtube.com/' icon='fa-brands fa-youtube' />
           <Chip link='github.com/' icon='fa-brands fa-github' />
           <Chip link='x.com/' icon='fa-brands fa-x-twitter' />
-        </div>
-        <p class='text-center mx-auto'>Site em construção - aguardem...</p>
+        </div> -->
+        
       </div>
 
       <!-- Typebot -->
@@ -104,7 +105,7 @@ const links: Link[] = [
     <!-- Script Typebot -->
     <script type="module">
       import Typebot from 'https://cdn.jsdelivr.net/npm/@typebot.io/js@0.3.4/dist/web.js';
-      Typebot.initStandard({ typebot: "governe", apiHost: "https://bot.cd2.io" });
+      Typebot.initStandard({ typebot: "leal", apiHost: "https://bot.cd2.io" });
     </script>
   </body>
 </html>
